--- a/BhavyaModhiya_490/Views/Shared/_LoginLayout.cshtml
+++ b/BhavyaModhiya_490/Views/Shared/_LoginLayout.cshtml
@@ -35,7 +35,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-7 col-lg-9">
                     <div class="wrap border" style="box-shadow: 0px 10px 34px -15px rgba(0, 0, 0, 0.24); background: #fff; border-radius: 5px; ">
-                        <div style="height: 300px; background-image: url(https://dg.imgix.net/seven-reasons-not-to-play-the-lottery-lwjmikju-en/landscape/seven-reasons-not-to-play-the-lottery-lwjmikju.jpg?ts=1482954821&ixlib=rails-4.3.1&auto=format%2Ccompress&fit=min&w=700&h=394&dpr=2&ch=Width%2CDPR);">
+                        <div style="height: 300px; background-repeat:no-repeat; background-size:cover; background-position-y:-50px; background-image: url(https://img.pikbest.com/wp/202347/slot-machine-cartoon-style-3d-and-coupon-envelope-on-a-purple-background-with-yellow-blue-hues_9742518.jpg!w700wp);">
                         </div>
                         <div class="login-wrap p-4 p-md-5">
                             @RenderBody()
